// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SignalrFacade used in NgModule should handle received messages: post-cleared 1`] = `
{
  "signalr": {
    "isConnected": false,
    "lastReceivedMessage": undefined,
    "receivedMessages": [],
  },
}
`;

exports[`SignalrFacade used in NgModule should handle received messages: pre-clear 1`] = `
{
  "signalr": {
    "isConnected": false,
    "lastReceivedMessage": {
      "data": "😎",
      "methodName": "helloWorld",
    },
    "receivedMessages": [
      {
        "data": "😎",
        "methodName": "helloWorld",
      },
    ],
  },
}
`;

exports[`SignalrFacade used in NgModule should handle reconnect 1`] = `
{
  "signalr": {
    "isConnected": true,
    "lastReceivedMessage": undefined,
    "receivedMessages": [],
  },
}
`;
